--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
-                            <outputFile>D:\Workspace\praca\World Manager\server\plugins\{project.artifactId}.jar</outputFile>
+                            <outputFile>D:\Workspace\praca\World Manager\server\plugins\${project.artifactId}.jar</outputFile>
                         </configuration>
                     </execution>
                 </executions>
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.14-R0.1-SNAPSHOT</version>
+            <version>1.14.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
